@startuml
'https://plantuml.com/class-diagram

class Parser
{
    +Parser(string[] text)
    +Instruction[] Parse()
}

enum InstructionType
{
    A_COMMAND
    C_COMMAND
    L_COMMAND
}

class Instruction
{
    +InstructionType type
    +int row
    +string dest
    +string comp
    +string jump
    +string symbol
}

class CodeGenerator
{
    +Dictionary<string, int> SymbolTable
    +Dictionary<string, string> DestTable
    +Dictionary<string, string> CompTable
    +Dictionary<string, string> JumpTable
    +CodeGenerator(Instruction[] instructions)
    +string[] Generate()
}

class Assembler
{
    +Assembler(string[] source)
    +string[] Assemble()
}

Assembler o--> Parser
Assembler o--> CodeGenerator
Instruction o--> InstructionType
Parser --> "create" Instruction


@enduml